adding toolkit to social media and animation to burger

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="social-media">
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a class="tooltip" href="#"><i class="fa-brands fa-instagram"></i><span class="tooltiptext">Instagram</span></a>
+                    <a class="tooltip" href="#"><i class="fa-brands fa-twitter"></i><span class="tooltiptext">Twitter</span></a>
+                    <a class="tooltip" href="www.linkedin.com/in/toussaint-manzi-554716209"><i class="fa-brands fa-linkedin"></i><span class="tooltiptext">Linkedin</span></a>
+                    <a class="tooltip" href="https://github.com/Toussaint-Manzi"><i class="fa-brands fa-github"></i><span class="tooltiptext">Github</span></a>
                     <div class="burger">
-                        <div class="line"></div>
-                        <div class="line"></div>
-                        <div class="line"></div>
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <div class="text"><span> Email:  </span><span class="email">  toussaintmanzi006@gmail.com</span></div>
                     <div class="text"><span>Age:</span> 21</div>
                     <div class="text"> <span>From:</span>  Kigali, Rwanda</div>
-                    <div class="btn">Download CV</div>
+                    <div class="btn"><a href="./files/Resume.pdf" download="Toussaint CV">Download CV</a></div>
                 </div>
             </div>
             <div class="footer">
