Adding contact form

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="social-media">
                     <a class="tooltip" href="#"><i class="fa-brands fa-instagram"></i><span class="tooltiptext">Instagram</span></a>
                     <a class="tooltip" href="#"><i class="fa-brands fa-twitter"></i><span class="tooltiptext">Twitter</span></a>
-                    <a class="tooltip" href="www.linkedin.com/in/toussaint-manzi-554716209"><i class="fa-brands fa-linkedin"></i><span class="tooltiptext">Linkedin</span></a>
+                    <a class="tooltip" href="https://www.linkedin.com/in/toussaint-manzi-554716209/"><i class="fa-brands fa-linkedin"></i><span class="tooltiptext">Linkedin</span></a>
                     <a class="tooltip" href="https://github.com/Toussaint-Manzi"><i class="fa-brands fa-github"></i><span class="tooltiptext">Github</span></a>
                     <div class="burger">
                         <div class="line1"></div>
@@ -213,10 +213,11 @@
                 <div class="right">
                     <div class="title">SEND US A NOTE</div>
                     <div class="input">
-                        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfxoD6fEz2oKoXz7ujqJFg3Ea7hPd7ZVBBIgP2S_P4bf8IXEw/formResponse" target="_self" method="POST">
-                            <input type="text" id="name" name="0" placeholder="Name" >
-                            <input type="email" id="email" name="3" placeholder="Email"><br>
-                            <textarea id="" name="" placeholder="Tell us more about what you need....."></textarea><br>
+                        <form action="https://formsubmit.co/familyissues006@gmail.com" method="POST">
+                            <input type="hidden" name="_next" value="https://toussaint-manzi.github.io/pages/thankyou.html">
+                            <input type="text" id="name" name="name" placeholder="Name" required>
+                            <input type="email" id="email" name="email" placeholder="Email" required><br>
+                            <textarea id="" name="Message" placeholder="Tell us more about what you need....." required></textarea><br>
                             <input class="btn" type="submit" value="Send Message">
                         </form>
                     </div>
