adding progress bar and download button

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     </div>
                     <div class="card">
                         <p class="year">2019-2023</p>
-                        <p class="degree">Bchelor's degree</p>
-                        <p class="clg">University Degree</p>
+                        <p class="degree">Bachelor's degree</p>
+                        <p class="clg">University of Rwanda</p>
                         <p class="msg">At college I'm doing bachelor in IT and this where my career journey began.</p>
                     </div>
                 </div>
@@ -177,6 +177,32 @@
                     </div>
                 </div>
             </div>
+            <div class="bottom">
+                <h2>My Skills</h2>
+                <div class="progressbar">
+                    <div class="left">
+                        <div class="html">
+                            <div class="info">HTML</div>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="css">
+                            <div class="info">CSS</div>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="javascript">
+                            <div class="info">Javascript</div>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="figma">
+                            <div class="info">Figma</div>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn"><a href="./files/Resume.pdf" download="Toussaint CV">Download CV  <i class="fa-solid fa-download"></i></a></div>
         </section>
 
         <!-- Resume section end -->
