changing path to thank you page

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="title">SEND US A NOTE</div>
                     <div class="input">
                         <form action="https://formsubmit.co/familyissues006@gmail.com" method="POST">
-                            <input type="hidden" name="_next" value="https://toussaint-manzi.github.io/thankyou.html">
+                            <input type="hidden" name="_next" value="https://toussaint-manzi.github.io/pages/thankyou.html">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="text" id="name" name="name" placeholder="Name" required>
                             <input type="email" id="email" name="email" placeholder="Email" required><br>
