changing profile picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section id="HomeSection">
             <div class="sidebar">
                 <div style="text-align:center">
-                    <img src="./Images/pp.jpg" class="profile-picture">
+                    <img src="./Images/pp1.jpg" class="profile-picture">
                 </div>
                 <h3>Toussaint Manzi</h3>
                 <ul>
