modification on profile picture

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <!-- Home section start -->
         <section id="HomeSection">
             <div class="sidebar">
-                <div style="text-align:center">
-                    <img src="./Images/pp1.jpg" class="profile-picture">
+                <div class="profile-picture">
+                    <!-- <img src="./Images/pp1.jpg" > -->
                 </div>
                 <h3>Toussaint Manzi</h3>
                 <ul>
